@@ -40,18 +40,21 @@ AC_CONFIG_HEADERS([config/config.h include/LHAPDF/Version.h])
 
 ## Checks for programs
 AC_PROG_CXX
+AX_CXX_COMPILE_STDCXX_11([noext],[optional])
 AC_PROG_CC
 AC_PROG_INSTALL
 AC_PROG_LN_S
 AC_PROG_LIBTOOL
 
 
-## Enable debugging symbols.
+## Enable debugging symbols and assert checking
 AC_ARG_ENABLE([debug],
   [AC_HELP_STRING(--enable-debug, [build with debugging symbols (default=no)])],
   [enable_debug=yes], [enable_debug=no])
 if test x$enable_debug == xyes; then
-  [AM_CXXFLAGS="$AM_CXXFLAGS -g"]
+  AM_CXXFLAGS="$AM_CXXFLAGS -g"
+else
+  AM_CXXFLAGS="$AM_CXXFLAGS -DNDEBUG"
 fi
 
 
